# cookbook

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  cookbook_readme.md  pyproject.toml  requirements.txt  test_llm_simple.py  test_refactor.py
docs/devlogs/: PHASE_1_2.md  TESTING.md
scripts/: ai_text_processor.py  example_script.py
shared/: adapters.py  errors.py  file_utils.py  http_client.py  llm.py
shared/core/: constants.py  types.py
shared/llm/: config.py
shared/utils/: files.py  logging.py
src/scripts/: ai_text_processor.py  enhanced_text_processor.py
src/shared/: __init__.py  config.py  document_processor.py
src/shared/core/: __init__.py
src/shared/llm/: __init__.py  adapters.py  client.py  http_client.py
src/shared/utils/: __init__.py  cli.py
src/tests/: conftest.py  test_document_processor.py  test_file_utils.py  test_http_client.py  test_llm.py  test_llm_adapters.py  test_llm_client.py  test_script_processors.py
src/tests/samples/: ai_development.txt
temp_backup/: cleanup_old_files.py  test_after_cleanup.py
