[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cookbook"
version = "0.1.0"
description = "Personal automation recipes"
authors = [{ name = "Guilherme Doval" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
audio = ["openai-whisper>=20231117", "pydub>=0.25.1"]
ai = ["openai>=1.0.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0"]
pdf = ["PyPDF2>=3.0.0"]
dev = ["pytest>=7.4.0", "black>=23.0.0", "flake8>=6.0.0"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
